--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "dev": "ts-node --project tsconfig.json src/index.ts",
+    "dev": "nodemon src/index.ts",
     "client": "webpack --watch"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.12",
     "buffer": "^5.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "parcel": "^2.8.1",
+    "nodemon": "^2.0.20",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
@@ -25,6 +25,8 @@
     "@types/socket.io-client": "^3.0.0",
     "express": "^4.18.2",
     "socket.io": "^4.5.4",
-    "socket.io-client": "^4.5.4"
+    "socket.io-client": "^4.5.4",
+    "tmx-parser": "^1.5.0",
+    "zod": "^3.19.1"
   }
 }
